# SDL2_Game

./: .gitignore  CMakeLists.txt  MyGame.sln  README.md
MyGame/: MyGame.vcxproj  MyGame.vcxproj.filters  config.json  imgui.ini
MyGame/assets/data/: config.json  player.json
MyGame/src/: Bullet.h  Constants.h  Game.cpp  Game.h  GameObject.h  Player.h  Player.hPlayer  TextureManager.cpp  TextureManager.h  main.cpp
MyGame/src/Core/: Animator.cpp  Animator.h  Camera.cpp  Camera.h  ConfigManager.cpp  ConfigManager.h  Game.cpp  Game.h  GameParams.h  GameSession.cpp  GameSession.h  InputHandler.h  Physics.cpp  Physics.h  Time.cpp  Time.h  Timer.h  main.cpp
MyGame/src/Editor/: EditorGUI.cpp  EditorGUI.h
MyGame/src/GameLogic/: WaveManager.cpp  WaveManager.h
MyGame/src/Objects/: Base.cpp  Base.h  Block.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  GameObject.h  Player.cpp  Player.h  Turret.cpp  Turret.h
MyGame/src/Scenes/: EditorScene.cpp  EditorScene.h  PlayScene.cpp  PlayScene.h  Scene.cpp  Scene.h  TitleScene.cpp  TitleScene.h
MyGame/src/UI/: Button.cpp  Button.h  TextRenderer.cpp  TextRenderer.h
MyGame/src/Weapons/: WeaponConfig.h
MyGame/x64/Debug/: MyGame.exe.recipe  MyGame.ilk  vc143.idb
MyGame/x64/Debug/MyGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MyGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
enc_temp_folder/163a5d4e86d28651dbbca44d3f442/: imgui.ini
enc_temp_folder/437682b8935982d7f7b60b5eebde578/: GameParams.h
enc_temp_folder/6b5d2d2e1ae245fe617fe25e254d82a/: config.json
